Working fine now ready to upload into the google play store

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
         <item>Select an item</item>
         <item>Grocery</item>
         <item>Vegetable</item>
-        <item>Mutton</item>
+        <item>Non-Veg</item>
         <item>Chicken</item>
         <item>Fish</item>
         <item>Sweets</item>
